# AegisLang

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SPEC.md  Step-by-step.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aegislang/agents/: aegis_ingestor.py  compiler_agent.py  policy_parser_agent.py  schema_mapping_agent.py  trace_validator_agent.py
aegislang/api/: __init__.py  server.py
aegislang/core/: __init__.py  logging.py  metrics.py
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  FAQ.md  SECURITY_SCAN.md  TROUBLESHOOTING.md
scripts/: init-db.sql
templates/python/: test_stub.py.j2  validator_class.py.j2
templates/sql/: audit_table.sql.j2  check_constraint.sql.j2  trigger.sql.j2
templates/yaml/: conditional.yaml.j2  obligation.yaml.j2  prohibition.yaml.j2
tests/: test_api.py  test_ingestor.py  test_integration.py  test_mapper.py  test_parser.py  test_regression.py  test_system.py
tests/performance/: __init__.py  locustfile.py  stress_test.py
